@@ -1,5 +1,6 @@
 29 Jul 2003 mipsator
  * style, descriptions and misc in pmk.
+ * added pmk_check_type() and some style cosmetics in func.
 
 28 Jul 2003 mipsator
  * improved dir_explore().
